# jupyter-utility-widgets

./: LICENSE  README.md  environment.yml  postBuild  pyproject.toml
.github/workflows/: python-publish.yml
examples/: chat.ipynb  file_selector.ipynb  filter_design.ipynb  index_selector.ipynb  numerical_input.ipynb  requirements.txt  spectrogram.ipynb
jupyter_utility_widgets/: file_explorer.py  filter_design.py
jupyter_utility_widgets/audio/: __init__.py  audio.js
jupyter_utility_widgets/chat/: audio_message.py  chat_display.py  chat_interface.py  content_input.py  content_input_protocol.py  message.js  message.py  message_display.py  message_wrapper.js  text_message.js  text_message.py
jupyter_utility_widgets/input/: __init__.py  numerical.py
jupyter_utility_widgets/plot/: __init__.py  filter.py  specgram_examiner.py
jupyter_utility_widgets/plot/figures/: base.py  indicators.py  lines.py  specgram.py
jupyter_utility_widgets/selector/: index_selector.py
jupyter_utility_widgets/utility/: numpy_parameter_converter.py
