[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter-utility-widgets"
version = "0.0.7a"
readme = "README.md"
dependencies = [
    "ipywidgets>=8.0.2",
    "numpydoc",
    "numpy",
    "scipy",
    "matplotlib",
    "ipympl",
]
description = "Assortment of reusable common jupyter widget patterns"

[tool.setuptools.package-data]
"jupyter_utility_widgets" = ["**"]
recipe = ["*.js"]